--- a/src/lab/exp8/Manual.html
+++ b/src/lab/exp8/Manual.html
@@ -97,14 +97,188 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="col-md-10 lab-list-col-10">
 							
 							<!--edit -->
-<h1 class="text-h2-lightblue">Consolidation Test</h1><div class="content" id="experiment-article-section-5-content">
-<h3>Observation Table:</h3> <br/><br/>
-<img alt="" height="375" src="obervation_table.JPG" width="550"/><br/>
-<p>
-<a href="Exp-8 ConsolidationTest.pdf" target="_blank">Read More</a>
-</p>
-<br/><br/><br/></div>						</div>
+<h1 class="text-h2-lightblue">Consolidation Test</h1>
+						<div class="content" id="experiment-article-section-5-content">
+							<h3>Observation Table:</h3> <br /><br />
+							<!-- <img alt="" height="375" src="obervation_table.JPG" width="550"/><br/> -->
+							<h3>Observations Table:</h3>
+							<table style="width:32%;" border="1">
+								<tr>
+									<td>Elasped
+										Rate&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+									</td>
+
+									<td>Data gauge Reading</td>
+								</tr>
+							</table>
+
+							<table border="1" cellpadding="5">
+								<tbody>
+
+									<tr>
+										<td>Pressure Intensity(kg/cm^2)</td>
+										<td>0.1</td>
+										<td>0.2</td>
+										<td>0.5</td>
+										<td>1</td>
+										<td>2</td>
+										<td>4</td>
+										<td>8</td>
+									</tr>
+																	
+									<tr>
+										<td>0.25min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>1 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>2.5 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>4 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>6.25 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>9 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>16 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>25 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>30 min</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>1 hrs</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>2 hrs</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>4 hrs</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>8 hrs</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td>24 hrs</td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+										<td></td>
+									</tr>
+
+
+
+								</tbody>
+							</table>
+
+							<p>
+								<a href="Exp-8 ConsolidationTest.pdf" target="_blank">Read More</a>
+							</p>
+							<br /><br /><br />
+						</div>
 					</div>
+				</div>
 			</div>
 			<!-- =================================================================================================================================== -->
 
